--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,9 @@
             %i+=1
         %end
       </div>
+      <nav id="page-nav">
+          <a href="2.html"></a>
+      </nav>
 
       <footer>
         <p>&copy; Company 2011</p>
