--- a/templates/page.html
+++ b/templates/page.html
@@ -11,7 +11,7 @@
 %for bottle in bottles:
     <div class="pin">
       <a class="PinImage ImgLink" href="{{ bottle.download }}">
-        <img style="width: 300px;" alt="It's going to be my good-bye. Love. " src="{{ bottle.image }}">
+        <img style="width: 300px;" src="{{ bottle.image }}">
       </a>
     </div>
     %if i==r:
